--- a/public/static/main.css
+++ b/public/static/main.css
@@ -84,13 +84,13 @@ form {
     width: 50%;
 }
 
-form input {
+form input, select {
     font-size: 1.5rem;
     padding: 1rem;
     margin: .3rem 0 1.5rem 0;
 }
 
-form input[type=text],input[type=password] {
+form input[type=text], input[type=password], select {
     border-top: none;
     border-right: none;
     border-left: none;
@@ -108,12 +108,20 @@ form input[type=submit] {
 }
 
 form input[type=submit]:active {
-    outline:auto;
+    outline: auto;
 }
 
-form input[type=text]:focus,input[type=password]:focus {
+form input[type=text]:focus, input[type=password]:focus, select:focus {
     outline: none;
     background-color: #d2d2d2;
+}
+
+form input[type=text]:invalid, input[type=password]:invalid, select:invalid {
+    border-bottom-color: red;
+}
+
+form select:disabled {
+    color: black;
 }
 
 .left-justify-children {
