--- a/private/views/signup.ejs
+++ b/private/views/signup.ejs
@@ -1,29 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wdth,wght@85,302;85,699&display=swap" rel="stylesheet">
-  <link rel=stylesheet href=main.css>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src=config/validation.config.js></script>
+  <%- include('./partials/_head_meta'); %>
   <script src=signup.js></script>
 </head>
 <body>
   <div id=main class=flex-rows>
     <div id=main-column class=flex-cols>
-      <div id=nav-bar>
-        <div id=nav-bar-left>
-          <a href="/">Home</a>
-          <a href=/about>About</a>
-        </div>
-        <div id=nav-bar-right>
-          <a id=login-link href=/login>Login</a>
-        </div>
-      </div>
-      <header>
-        <h1>AFM Interplanetary</h1>
-      </header>
+      <%- include('./partials/_nav'); %>
+      <%- include('./partials/_header'); %>
       <div id=form-div class="flex-rows center">
         <form class=flex-cols action=/ method=post>
           <h2 class=no-margin-top>Sign Up</h2>
