--- a/public/static/main.css
+++ b/public/static/main.css
@@ -72,7 +72,13 @@ h2 {
     color: black;
 }
 
-#form-div {
+p {
+    text-align: left;
+    -webkit-text-stroke-width: 0.05rem;
+    -webkit-text-stroke-color: black;
+}
+
+#form-div, #about-text {
     margin: 5rem 0;
 }
 
