--- a/private/views/partials/_nav.ejs
+++ b/private/views/partials/_nav.ejs
@@ -1,12 +1,12 @@
 <div id=nav-bar>
   <div id=nav-bar-left>
-    <a id=home-link href='/'>Home</a>
-    <a id=about-link href=/about>About</a>
+    <a id=home-link class=float-left href='/'>Home</a>
+    <a id=about-link class=float-left href=/about>About</a>
   </div>
   <div id=nav-bar-right>
-    <a id=signup-link href=/signup>Sign Up</a>
-    <a id=login-link href=/login>Login</a>
-    <a id=logout-link href=/api/logout>Logout</a>
-    <a id=reservation-link href=/reservation>Reservations</a>
+    <a id=signup-link class=float-right href=/signup>Sign Up</a>
+    <a id=login-link class=float-right href=/login>Login</a>
+    <a id=logout-link class=float-right href=/api/logout>Logout</a>
+    <a id=reservation-link class=float-right href=/reservation>Reservations</a>
   </div>
 </div>
