--- a/public/static/main.css
+++ b/public/static/main.css
@@ -6,6 +6,73 @@ body {
     text-align: center;
 }
 
+h1 {
+    font-size: 5rem;
+    font-weight: 699;
+    -webkit-text-stroke-width: 0.1rem;
+    -webkit-text-stroke-color: black;
+}
+
+h2 {
+    font-size: 3.5rem;
+    color: black;
+}
+
+p {
+    text-align: left;
+    -webkit-text-stroke-width: 0.05rem;
+    -webkit-text-stroke-color: black;
+}
+
+form {
+    margin-bottom: 5rem;
+    padding: 2rem 2rem;
+    background-color: #f2f2f2;
+    border-radius: 2rem;
+    width: 50%;
+}
+
+form input, select {
+    font-size: 1.5rem;
+    padding: 1rem;
+    margin: .3rem 0 1.5rem 0;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    border-bottom-color: black;
+    border-bottom-width: 2px;
+    background: #f2f2f2;
+}
+
+form input[type=submit] {
+    border-radius: 1rem;
+    border: none;
+    background-color: lightblue;
+}
+
+form input[type=submit]:hover, input[type=submit]:active {
+    background-color: #7e9ced;
+}
+
+form input[type=submit]:active {
+    outline: auto;
+}
+
+form input[type=text]:focus, input[type=password]:focus, select:focus {
+    outline: none;
+    background-color: #d2d2d2;
+}
+
+form input[type=text]:invalid, input[type=password]:invalid, select:invalid {
+    border-bottom-color: red;
+}
+
+form select:disabled {
+    color: black;
+}
+
 .flex-rows {
     display: flex;
     flex-direction: row;
@@ -16,9 +83,27 @@ body {
     flex-direction: column;
 }
 
+.float-left {
+    float: left;
+}
+
+.float-right {
+    float: right;
+}
+
 .center {
     width: 100%;
     justify-content: center;
+}
+
+.left-justify-children {
+    width: 100%;
+    display: flex;
+    text-align: left;
+}
+
+.no-margin-top {
+    margin-top: 0;
 }
 
 #main {
@@ -46,101 +131,7 @@ body {
     font-size: 1.25rem;
 }
 
-#nav-bar-left a {
-    float: left;
-}
-
-#nav-bar-right a {
-    float: right;
-}
-
 #nav-bar a:hover {
     background-color: #ddd;
     color: black;
   }
-
-h1 {
-    font-size: 5rem;
-    font-weight: 699;
-    margin: 0;
-    -webkit-text-stroke-width: 0.1rem;
-    -webkit-text-stroke-color: black;
-}
-
-h2 {
-    font-size: 3.5rem;
-    color: black;
-}
-
-p {
-    text-align: left;
-    -webkit-text-stroke-width: 0.05rem;
-    -webkit-text-stroke-color: black;
-}
-
-#form-div, #about-text {
-    margin: 5rem 0;
-}
-
-form {
-    margin-bottom: 5rem;
-    padding: 2rem 2rem;
-    background-color: #f2f2f2;
-    border-radius: 2rem;
-    width: 50%;
-}
-
-form input, select {
-    font-size: 1.5rem;
-    padding: 1rem;
-    margin: .3rem 0 1.5rem 0;
-}
-
-form input[type=text], input[type=password], select {
-    border-top: none;
-    border-right: none;
-    border-left: none;
-    border-top-left-radius: 1rem;
-    border-top-right-radius: 1rem;
-    border-bottom-color: black;
-    border-bottom-width: 2px;
-    background: #f2f2f2;
-}
-
-form input[type=submit] {
-    border-radius: 1rem;
-    border: none;
-    background-color: lightblue;
-}
-
-form input[type=submit]:active {
-    outline: auto;
-}
-
-form input[type=text]:focus, input[type=password]:focus, select:focus {
-    outline: none;
-    background-color: #d2d2d2;
-}
-
-form input[type=text]:invalid, input[type=password]:invalid, select:invalid {
-    border-bottom-color: red;
-}
-
-form select:disabled {
-    color: black;
-}
-
-.left-justify-children {
-    width: 100%;
-    display: flex;
-    text-align: left;
-}
-
-.form-error {
-    color: red;
-    margin: 0;
-}
-
-.no-margin-top {
-    margin-top: 0;
-}
