--- a/private/views/partials/_head_meta.ejs
+++ b/private/views/partials/_head_meta.ejs
@@ -1,7 +1,14 @@
+<!-- for website title font -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wdth,wght@85,302;85,699&display=swap" rel="stylesheet">
+
+<!-- css -->
 <link rel=stylesheet href=main.css>
+
+<!-- jquery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- general scripts -->
 <script src=util.js></script>
 <script src=config/validation.config.js></script>
