--- a/private/views/partials/_nav.ejs
+++ b/private/views/partials/_nav.ejs
@@ -1,9 +1,16 @@
+<!-- layout divs -->
 <div id=nav-bar>
   <div id=nav-bar-left>
+
+    <!-- navigation links -->
     <a id=home-link class=float-left href='/'>Home</a>
     <a id=about-link class=float-left href=/about>About</a>
   </div>
+
+  <!-- layout div -->
   <div id=nav-bar-right>
+
+    <!-- more navigation links -->
     <a id=signup-link class=float-right href=/signup>Sign Up</a>
     <a id=login-link class=float-right href=/login>Login</a>
     <a id=logout-link class=float-right href=/api/logout>Logout</a>
