replace all double-quote with single-quote

--- a/private/views/about.ejs
+++ b/private/views/about.ejs
@@ -9,7 +9,7 @@
     <div id=main-column class=flex-cols>
       <%- include('./partials/_nav'); %>
       <%- include('./partials/_header'); %>
-      <div id=about-text class="flex-rows center">
+      <div id=about-text class='flex-rows center'>
         <!-- TODO(AD) - this is really bad - <p> shouldn't be inside of form.... -->
         <!-- TODO(AD) - rewrite this paragraph and add whatever other information is needed.
                 (i.e. group member names (and contact info), sources (bg img), technologies, etc) -->
