added new reservation page

--- a/private/views/partials/_nav.ejs
+++ b/private/views/partials/_nav.ejs
@@ -3,17 +3,18 @@
   <div id=nav-bar-left>
 
     <!-- navigation links -->
-    <a id=home-link class=float-left href='/'>Home</a>
-    <a id=about-link class=float-left href=/about>About</a>
+    <a hidden id=home-link              class=float-left href='/'                >Home</a>
+    <a hidden id=about-link             class=float-left href=/about             >About</a>
   </div>
 
   <!-- layout div -->
   <div id=nav-bar-right>
 
     <!-- more navigation links -->
-    <a id=signup-link class=float-right href=/signup>Sign Up</a>
-    <a id=login-link class=float-right href=/login>Login</a>
-    <a id=logout-link class=float-right href=/api/logout>Logout</a>
-    <a id=reservation-link class=float-right href=/reservation>Reservations</a>
+    <a hidden id=signup-link            class=float-right href=/signup           >Sign Up</a>
+    <a hidden id=login-link             class=float-right href=/login            >Login</a>
+    <a hidden id=logout-link            class=float-right href=/api/logout       >Logout</a>
+    <a hidden id=reservation-link       class=float-right href=/reservation      >New Reservation</a>
+    <a hidden id=reservation-view-link  class=float-right href=/reservation/view >View Reservations</a>
   </div>
 </div>
