--- a/public/static/main.css
+++ b/public/static/main.css
@@ -32,7 +32,11 @@ form {
     width: 50%;
 }
 
-form input, select {
+label {
+    color: black;
+}
+
+form input, select, label {
     font-size: 1.5rem;
     padding: 1rem;
     margin: .3rem 0 1.5rem 0;
@@ -125,13 +129,17 @@ form select:disabled {
 
 #nav-bar a {
     color: #f2f2f2;
+    font-weight: 700;
     text-align: center;
     padding: 1rem 1rem;
     text-decoration: none;
     font-size: 1.25rem;
+    -webkit-text-stroke-width: 0.05rem;
+    -webkit-text-stroke-color: black;
 }
 
 #nav-bar a:hover {
     background-color: #ddd;
     color: black;
+    -webkit-text-stroke-width: 0;
   }
