added view reservation page and impl

--- a/private/views/viewreservation.ejs
+++ b/private/views/viewreservation.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <%- include('./partials/_head_meta'); %>
-  <script src=reservation.js></script>
+  <script src=/viewreservation.js></script>
 </head>
 <body>
   <!-- page layout divs -->
@@ -13,20 +13,30 @@
       <%- include('./partials/_nav'); %>
       <%- include('./partials/_header'); %>
 
-      <!-- form layout div -->
+      <!-- layout div -->
       <div id=form-div class='flex-rows center'>
         <form class=flex-cols action=/ method=post>
 
-          <!-- form header -->
-          <h2 class=no-margin-top>New Reservation</h2>
+          <!-- header -->
+          <h2 class=no-margin-top>Existing Reservations</h2>
 
           <!-- form fields -->
-          <input type=text id=trip_date name=trip_date placeholder='Select Trip Date'>
+          <table id=reservation_display hidden>
+            <tr>
+              <th>Trip Date</th>
+              <th>Number of Passengers</th>
+              <th>Created</th>
+              <th>Updated</th>
+            </tr>
+          </table>
+
+          <div hidden id=no_reservation class=black-text>No reservations currently exist. <a href=/reservation>Create one?</a></div>
+          <!-- <input type=text id=trip_date name=trip_date placeholder='Select Trip Date'>
           <div class=flex-rows>
             <select hidden class=center id=num_passengers name=num_passengers><option value=0>Select Number of Passengers</option></select>
             <label hidden for=num_passengers>passenger(s)</label>
           </div>
-          <input id=submit-form type=submit value='Submit' on>
+          <input id=submit-form type=submit value='Submit' on> -->
         </form>
       </div>
     </div>
