added seat selection to reservations

--- a/private/views/partials/_head_meta.ejs
+++ b/private/views/partials/_head_meta.ejs
@@ -1,23 +1,26 @@
 <!-- for website title font -->
-<!-- <link rel=preconnect href=https://fonts.googleapis.com>
+<link rel=preconnect href=https://fonts.googleapis.com>
 <link rel=preconnect href=https://fonts.gstatic.com crossorigin>
-<link href='https://fonts.googleapis.com/css2?family=Open+Sans:wdth,wght@85,302;85,699&display=swap' rel=stylesheet> -->
+<link href='https://fonts.googleapis.com/css2?family=Open+Sans:wdth,wght@85,302;85,699&display=swap' rel=stylesheet>
 
 <!-- css -->
 <link rel=stylesheet href=/main.css>
 
 <!-- jquery -->
-<!-- <script src=https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js></script>
+<script src=https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js></script>
 <link rel=stylesheet href=https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css>
-<script src=https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js></script> -->
+<script src=https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js></script>
 
 <!-- local lib -->
-<link href=/lib/font.css rel=stylesheet>
+<!-- <link href=/lib/font.css rel=stylesheet>
 <script src=/lib/jquery.min.js></script>
 <link rel=stylesheet href=/lib/jquery-ui.css>
-<script src=/lib/jquery-ui.min.js></script>
+<script src=/lib/jquery-ui.min.js></script> -->
 
 
 <!-- general scripts -->
 <script src=/util.js></script>
 <script src=/config/validation.config.js></script>
+
+<!-- webpage title -->
+<title>AFM Interplanetary</title>
