--- a/private/views/reservation.ejs
+++ b/private/views/reservation.ejs
@@ -29,6 +29,7 @@
             <select hidden class=center id=num_passengers name=num_passengers><option value=0>Select Number of Passengers</option></select>
             <label hidden for=num_passengers>passenger(s)</label>
           </div>
+          <div id=seat_selection_container></div>
           <input id=submit-form type=submit value='Submit' on>
         </form>
       </div>
