--- a/private/views/viewreservation.ejs
+++ b/private/views/viewreservation.ejs
@@ -23,10 +23,10 @@
           <!-- form fields -->
           <table id=reservation_display hidden>
             <tr>
-              <th>Trip Date</th>
-              <th>Number of Passengers</th>
-              <th>Created</th>
-              <th>Updated</th>
+              <th><br>Trip Date</th>
+              <th>Number of Passengers<br>Seats</th>
+              <th><br>Created</th>
+              <th><br>Updated</th>
             </tr>
           </table>
 
