dir structure change

--- a/private/views/partials/_head_meta.ejs
+++ b/private/views/partials/_head_meta.ejs
@@ -4,7 +4,7 @@
 <link href='https://fonts.googleapis.com/css2?family=Open+Sans:wdth,wght@85,302;85,699&display=swap' rel=stylesheet>
 
 <!-- css -->
-<link rel=stylesheet href=/main.css>
+<link rel=stylesheet href=/styles/main.css>
 
 <!-- jquery -->
 <script src=https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js></script>
@@ -13,14 +13,14 @@
 
 <!-- local lib -->
 <!-- <link href=/lib/font.css rel=stylesheet>
-<script src=/lib/jquery.min.js></script>
-<link rel=stylesheet href=/lib/jquery-ui.css>
-<script src=/lib/jquery-ui.min.js></script> -->
+<script src=/scripts/lib/jquery.min.js></script>
+<link rel=stylesheet href=/scripts/lib/jquery-ui.css>
+<script src=/scripts/lib/jquery-ui.min.js></script> -->
 
 
 <!-- general scripts -->
-<script src=/util.js></script>
-<script src=/config/validation.config.js></script>
+<script src=/scripts/util.js></script>
+<script src=/scripts/config/validation.config.js></script>
 
 <!-- webpage title -->
 <title>AFM Interplanetary</title>
