--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('moon-main.jpg');
+    background-image: url('/img/moon-main.jpg');
     background-size: 100%;
     font-family: 'Open Sans', sans-serif;
     color: #f2f2f2;
