--- a/private/views/login.ejs
+++ b/private/views/login.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <%- include('./partials/_head_meta'); %>
-  <script src=login.js></script>
+  <script src=/scripts/login.js></script>
 </head>
 <body>
 
