--- a/private/views/signup.ejs
+++ b/private/views/signup.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <%- include('./partials/_head_meta'); %>
-  <script src=signup.js></script>
+  <script src=/scripts/signup.js></script>
 </head>
 <body>
 
