--- a/private/views/login.ejs
+++ b/private/views/login.ejs
@@ -24,6 +24,7 @@
           <!-- form fields -->
           <input  id=username     type=text     name=username     placeholder=Username>
           <input  id=password     type=password name=password     placeholder=Password>
+          <%- include('./partials/_show_pass'); %>
           <input  id=submit-login type=submit   name=submit-login value=Login on>
 
           <!-- reset password link -->
