--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -159,17 +159,17 @@ form select:disabled {
     -webkit-text-stroke-width: 0;
 }
 
-input[type='checkbox']:not(:checked),
-input[type='checkbox']:checked {
+td > input[type='checkbox']:not(:checked),
+td > input[type='checkbox']:checked {
     position: absolute;
     left: -9999%;
 }
 
-input[type='checkbox']:not(:enabled) + label {
+td > input[type='checkbox']:not(:enabled) + label {
     background-color: gainsboro;
 }
 
-input[type='checkbox']:checked + label {
+td > input[type='checkbox']:checked + label {
     background-color: lightgreen;
 }
 
@@ -177,7 +177,7 @@ td > input[type='checkbox']:enabled:hover + label {
   border: 2px solid #5c6aff;
 }
 
-input[type='checkbox'] + label {
+td > input[type='checkbox'] + label {
     display: inline-block;
     padding: 10px;
     border-radius: 10px;
@@ -197,4 +197,8 @@ hr {
 
 #seat_selection_container {
     display: none;
+}
+
+a:visited, a:active {
+    color: blue;
 }
