code cleanup and bug fixes

--- a/private/views/partials/_show_pass.ejs
+++ b/private/views/partials/_show_pass.ejs
@@ -1,4 +1,4 @@
 <div class=flex-rows style='align-items: center;'>
-  <input style='height: 1.5rem; width: 1.5rem' id=show-pass type=checkbox name=show-pass>
-  <label style='margin: 0' id=show-pass-label for=show-pass>Show Password</label>
+  <input style='height: 1.5rem; width: 1.5rem; margin-bottom: 15px;' id=show-pass type=checkbox name=show-pass>
+  <label style='margin: 0; padding-top: 0;' id=show-pass-label for=show-pass>Show Password</label>
 </div>
