view reservation page deletes table when last reservation is deleted

--- a/private/views/viewreservation.ejs
+++ b/private/views/viewreservation.ejs
@@ -31,12 +31,15 @@
 
           <!-- table to display existing reservations -->
           <table id=reservation_display hidden>
-            <tr>
-              <th><br>Trip Date</th>
-              <th>Number of Passengers<hr>Seats</th>
-              <th><br>Created</th>
-              <th><br>Updated</th>
-            </tr>
+            <thead>
+              <tr>
+                <th><br>Trip Date</th>
+                <th>Number of Passengers<hr>Seats</th>
+                <th><br>Created</th>
+                <th><br>Updated</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
           </table>
 
           <!-- message to display if no reservations exist for the user  -->
