QOL improvements to reservation creation

--- a/private/views/reservation.ejs
+++ b/private/views/reservation.ejs
@@ -30,7 +30,7 @@
             <label hidden for=num_passengers>passenger(s)</label>
           </div>
           <div id=seat_selection_container></div>
-          <input id=submit-form type=submit value='Submit' on>
+          <input hidden id=submit-form type=submit value='Submit' on>
         </form>
       </div>
     </div>
