change login/signup/reset forms to use class-based input fields

--- a/private/views/login.ejs
+++ b/private/views/login.ejs
@@ -22,8 +22,8 @@
           <h2 class=no-margin-top>Login</h2>
 
           <!-- form fields -->
-          <input  id=username     type=text     name=username     placeholder=Username>
-          <input  id=password     type=password name=password     placeholder=Password>
+          <span id=username_field_container></span>
+          <span id=password_field_container></span>
           <%- include('./partials/_show_pass'); %>
           <input  id=submit-login type=submit   name=submit-login value=Login on>
 
