--- a/private/views/signup.ejs
+++ b/private/views/signup.ejs
@@ -22,12 +22,12 @@
           <h2 class=no-margin-top>Sign Up</h2>
 
           <!-- form fields -->
-          <input  id=username                 type=text     name=username                 placeholder=Username>
-          <input  id=password                 type=password name=password                 placeholder='Choose Password'>
-          <input  id=pass_verify              type=password name=pass_verify              placeholder='Confirm Password'>
+          <span id=username_field_container></span>
+          <span id=password_field_container></span>
+          <span id=password_confirm_field_container></span>
           <%- include('./partials/_show_pass'); %> 
-          <select id=security_question_id                   name=security_question_id     enabled><option value=0>Select a security question...</option></select>
-          <input  id=security_question_answer type=text     name=security_question_answer placeholder='Security Question Answer'>
+          <span id=security_question_container></span>
+          <span id=security_question_answer_container></span>
           <input  id=submit-signup            type=submit   name=submit-signup            value='Create Account' on>
         </form>
       </div>
