converted from CommonJS to ES6 modules and fixed eslint issues

--- a/private/views/404.ejs
+++ b/private/views/404.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <%- include('./partials/_head_meta'); %>
-  <script src=/scripts/index.js></script>
+  <script type=module src=/scripts/index.js></script>
 </head>
 <body>
   <div id=main class=flex-rows>
