--- a/private/views/reservation.ejs
+++ b/private/views/reservation.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <%- include('./partials/_head_meta'); %>
-  <script src=/scripts/reservation.js></script>
+  <script type=module src=/scripts/reservation.js></script>
 </head>
 <body>
   <!-- page layout divs -->
