--- a/private/views/reset.ejs
+++ b/private/views/reset.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <%- include('./partials/_head_meta'); %>
-  <script src=/scripts/reset.js></script>
+  <script type=module src=/scripts/reset.js></script>
 </head>
 <body>
 
