--- a/private/views/index.ejs
+++ b/private/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <%- include('./partials/_head_meta'); %>
-  <script src=/scripts/index.js></script>
+  <script type=module src=/scripts/index.js></script>
 </head>
 <body>
   <div id=main class=flex-rows>
