converted user routes to use custom middleware for input validation

--- a/private/views/partials/_nav.ejs
+++ b/private/views/partials/_nav.ejs
@@ -13,7 +13,7 @@
     <!-- more navigation links -->
     <a hidden id=signup-link            class=float-right href=/signup           >Sign Up</a>
     <a hidden id=login-link             class=float-right href=/login            >Login</a>
-    <a hidden id=logout-link            class=float-right href=/api/logout       >Logout</a>
+    <a hidden id=logout-link            class=float-right href=/api/user/logout  >Logout</a>
     <a hidden id=reservation-link       class=float-right href=/reservation      >New Reservation</a>
     <a hidden id=reservation-view-link  class=float-right href=/reservation/view >View Reservations</a>
   </div>
