replaced browser built-in alert with jquery ui alert for session expiration

--- a/private/views/partials/_head_meta.ejs
+++ b/private/views/partials/_head_meta.ejs
@@ -6,8 +6,10 @@
 <!-- css -->
 <link rel=stylesheet href=/styles/main.css>
 
+
 <!-- jquery -->
 <script src=https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js></script>
+<link href = "https://code.jquery.com/ui/1.12.1/themes/ui-lightness/jquery-ui.css" rel=stylesheet>
 <link rel=stylesheet href=https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css>
 <script src=https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js></script>
 
